update optional task
